static/css/home.css
#header_image {
  position: absolute;
  z-index: -1;
}

#top {
  height: 298px;
}

#dynamic_menu {
  float: right;
}

#content {
  width: 100%;
  height: 100%;
  
}

  #project_description {
    color: #8b8b8b;
    font-weight: bold;
    text-align: center;
    margin-bottom: 2ex;
    margin-top: 2ex;
    border-bottom: thin solid #3bb34a;
    border-top: solid #3bb34a;
  }

  #news_tools {
      width: 100%;
 }

  #news {
    float: left; 
    color: #8b8b8b;
    width: auto;
    min-width: 60%;
  }

   .embedded-page.row {
     margin-bottom: 4ex;
   }

  #tools {
    float: right;
    width: 275px;
    background-color: #01bbd6;
    
  }
    #search {
      height: 8ex;
    }

  #sights_link {
    clear: both;
    width: 676px;
    margin: 0 auto;
  }

#footer {
    margin-top: 2ex;
    margin-bottom: 2ex;
}

